seperate script for MA on correlation data

--- a/code/010_MA_exposure.Rmd
+++ b/code/010_MA_exposure.Rmd
@@ -42,7 +42,6 @@ library(ggpubr)
 # url <- 'https://cran.r-project.org/src/contrib/Archive/meta/meta_4.15-0.tar.gz'
 # install.packages(url, repos=NULL, type="source")
 library(meta)
-
 library(metafor)
 
 
@@ -589,6 +588,7 @@ exp_sub_long_clean <- exp_sub_long %>%
   func_clean_nature_type(data = ., column_name = 'nature_type_o2') %>%
   func_clean_nature_quant(data = ., column_name = 'nature_quantity_o1') %>%
   func_clean_nature_quant(data = ., column_name = 'nature_quantity_o2') %>%
+  
   dplyr::select(id, all_of(cols_keep), 
                 effect_size_indices:Mean, mean, 
                 CI_95_lower, ci_95_lower, everything()) %>%
@@ -646,6 +646,8 @@ if (mh_tool == 'GHQ-12') {
   } else if (mh_tool == 'POMS') {
     exp_sub_mods_md <- exp_sub_mods_md %>%
       # dplyr::filter(effect_size_indices %in% effect_size_ind_i) %>%
+      func_clean_indicator_sub(data = ., column_name = 'MH_indicator_o1') %>%
+      func_clean_indicator_sub(data = ., column_name = 'MH_indicator_o2') %>%
       as.data.frame()
       
   } else {
@@ -673,264 +675,3 @@ se_pooled <- function(n1, n2, sd1, sd2) {
   return(se_p)
 }
 ```
-
-
-## Correlation
-
-  Correlations are restricted in their range, and it can introduce bias when we estimate the standard error for studies with a small sample size (Alexander, Scozzaro, and Borodkin 1989).
-  
-  The (Pearson or product-moment) correlation coefficient quantifies the direction and strength of the (linear) relationship between two quantitative variables and is therefore frequently used as the outcome measure for meta-analyses. Two alternative measures are a bias-corrected version of the correlation coefficient and Fisher's r-to-z transformed correlation coefficient.
-
-  * ri, the vector with the raw correlation coefficients
-  * ni, the corresponding sample sizes. 
-
-The options for the measure argument are then:
-  * "COR" for the raw correlation coefficient,
-  * "UCOR" for the raw correlation coefficient corrected for its slight negative bias (based on equation 2.3 in Olkin & Pratt, 1958),
-  * "ZCOR" for Fisher's r-to-z transformed correlation coefficient (Fisher, 1921).
-
-```{r}
-# load the metafor package
-library(metafor)
-
-dat <- escalc(data=exp_sub_mods_coef, measure="ZCOR", ri=mean, ni=N)
-study_label <- paste(dat$id, dat$model_id, sep = '_')
-
-res <- rma(yi, vi, data=dat, slab = study_label)
-res
-predict(res, transf=transf.ztor) ## ztor: z to r
-
-# outlier/influence diagnostics
-par(mar=c(5,6,4,2))
-plot(influence(res), cex=0.8, las=1)
-```
-
-```{r}
-m.cor <- metacor(data = exp_sub_mods_coef,
-                 cor = mean, 
-                 n = N,
-                 studlab = id,
-                 fixed = FALSE,
-                 random = TRUE,
-                 method.tau = "REML",
-                 hakn = TRUE,
-                 title = "Health and Wellbeing")
-summary(m.cor)
-```
-
-
-### Reporting the Amount of *Heterogeneity* In Your Meta-Analysis
-  If the confidence interval around τ^2 does not contain zero, it indicates that some between-study heterogeneity exists in our data. 
-  The value of τ is x, meaning that the true effect sizes have an estimated standard deviation of SD=x, expressed on the scale of the effect size metric.
-  
-  A look at the second line reveals that I^2= 63% and that H (the square root of H2) is 1.64. This means that more than half of the variation in our data is estimated to stem from true effect size differences. Using Higgins and Thompson’s “rule of thumb”, we can characterize this amount of heterogeneity as moderate to large.
-  
-  Here is how we could report the amount of heterogeneity we found in our example:
-
-  ```The between-study heterogeneity variance was estimated at ^τ2 = 0.08 (95%CI: 0.03-0.35), with an I2 value of 63% (95%CI: 38-78%). The prediction interval ranged from g = -0.06 to 1.21, indicating that negative intervention effects cannot be ruled out for future studies.```
-
-
-
-  https://wviechtb.github.io/metafor/reference/forest.rma.html
-```{r - forest}
-### forest plot --------------------------------------------------------------------------
-# forest(res)
-# forest(res, addpred=TRUE, header=TRUE)
-# print(forest(res, addpred=TRUE, header=TRUE))
-xlim_custmize = c(-1,1)
-
-f <- paste0('./figures/', 'plot_forest_', today ,'.png'); f
-png(file=f, 
-    # width = 3.5, height = 4, units = 'in', 
-    width = 1000, height = 1000, units = "px", pointsize = 22,
-    # res = 200
-    ) 
-forest(res, addpred=TRUE, header=TRUE, xlim=xlim_custmize, slab = study_label, shade=TRUE)
-dev.off() 
-
-forest(res, addpred=TRUE, header=TRUE, xlim=xlim_custmize, slab = study_label) # showweights=TRUE
-forest(res, addpred=TRUE, header=TRUE, xlim=xlim_custmize, atransf=exp)
-#' optional argument to specify a function to transform the x-axis labels and annotations (e.g., atransf=exp)
-forest(res, addpred=TRUE, header=TRUE, xlim=xlim_custmize, atransf=exp, at=log(c(.6, .8, 1, 1.2, 1.4)))
-```
-
-
-* NOT in use
-```{r - forest plots with subgroups - to be fixed, eval=FALSE, include=FALSE}
-# a little helper function to add Q-test, I^2, and tau^2 estimate info
-mlabfun <- function(text, res) {
-   list(bquote(paste(.(text),
-      " (Q = ", .(formatC(res$QE, digits=2, format="f")),
-      ", df = ", .(res$k - res$p),
-      ", p ", .(metafor:::.pval(res$QEp, digits=2, showeq=TRUE, sep=" ")), "; ",
-      I^2, " = ", .(formatC(res$I2, digits=1, format="f")), "%, ",
-      tau^2, " = ", .(formatC(res$tau2, digits=2, format="f")), ")")))}
-
-# set up forest plot (with 2x2 table counts added; the 'rows' argument is
-# used to specify in which rows the outcomes will be plotted)
-# forest(res, addpred=TRUE, header=TRUE, xlim=xlim_custmize, slab = study_label)
-forest(res, 
-       addpred=TRUE, 
-       slab = study_label,
-       # xlim=c(-16, 4.6), at=log(c(0.05, 0.25, 1, 4)), 
-       # atransf=exp,
-       # ilab=cbind(dat$tpos, dat$tneg, dat$cpos, dat$cneg),
-       # ilab.xpos=c(-9.5,-8,-6,-4.5), cex=0.90, 
-       # ylim=c(-1, 27),            ## add extra space in plot
-       order=dat$nature_quantity, 
-       # rows=c(3:4,9:15,20:23),    ## set positions
-       mlab=mlabfun("RE Model for All Studies", res),
-       psize=1, header="Author(s) and Year")
-
-# set font expansion factor (as in forest() above) and use a bold font
-op <- par(cex=0.90, font=2)
-
-
-# switch to bold italic font
-par(font=4)
-
-# add text for the subgroups
-text(-16, c(24,16,5), pos=4, c("Systematic Allocation",
-                               "Random Allocation",
-                               "Alternate Allocation"))
-
-# set par back to the original settings
-par(op)
-
-# fit random-effects model in the three subgroups
-res.s <- rma(yi, vi, subset=(nature_quantity=="NDVI"), data=dat)
-res.r <- rma(yi, vi, subset=(nature_quantity=="Percentage of greenspace"),     data=dat)
-res.a <- rma(yi, vi, subset=(nature_quantity=="Other: Percentage of greenspace; Percentage of bluespace; presence of a garden"),  data=dat)
-
-# add summary polygons for the three subgroups
-addpoly(res.s, row=18.5, cex=0.90, 
-        # atransf=exp, 
-        mlab=mlabfun("RE Model for Subgroup", res.s))
-addpoly(res.r, row= 7.5, cex=0.90, 
-        # atransf=exp, 
-        mlab=mlabfun("RE Model for Subgroup", res.r))
-addpoly(res.a, row= 1.5, cex=0.90, 
-        # atransf=exp, 
-        mlab=mlabfun("RE Model for Subgroup", res.a))
-
-# fit meta-regression model to test for subgroup differences
-res <- rma(yi, vi, mods = ~ nature_quantity, data=dat)
-
-# add text for the test of subgroup differences
-text(x = -16, y = -1.8, pos=4, cex=0.90, bquote(paste("Test for Subgroup Differences: ",
-     Q[M], " = ", .(formatC(res$QM, digits=2, format="f")), ", df = ", .(res$p - 1),
-     ", p = ", .(formatC(res$QMp, digits=2, format="f")))))
-```
-
-
-
-```{r - forest - meta, fig.height=10, fig.width=8}
-forest.meta(m.cor, 
-            sortvar = TE,
-            prediction = TRUE, 
-            print.tau2 = FALSE,
-            leftlabs = c("Author", "g", "SE"))
-
-
-```
-```{r}
-
-drapery(m.cor, 
-        labels = "id",
-        type = "pval", 
-        legend = FALSE)
-```
-
-
-
-##### - funnel for publication bias
-
-  Given our assumptions, and in the case when there is no publication bias, all studies would lie symmetrically around our pooled effect size (the vertical line in the middle), within the form of the funnel. 
-  
-  When *publication bias* is present, we would assume that the funnel would look asymmetrical, because only the small studies with a large effect size very published, while small studies without a significant, large effect would be missing.
-  
-  We can see in the plot that while some studies have statistically significant effect sizes (the gray areas), others do not (white background). 
-  
-  - https://cjvanlissa.github.io/Doing-Meta-Analysis-in-R/smallstudyeffects.html
-  
-  - https://wviechtb.github.io/metafor/reference/funnel.html
-  
-```{r}
-### funnel plot --------------------------------------------------------------------------
-# funnel(res)
-# funnel(res, ylim=c(0,.08), las=1)
-funnel(res, ylim=c(0,.08), las=1, digits=list(2L,2), legend=TRUE)
-
-## trim and fill method
-funnel(trimfill(res), # , side = 'left'
-       las=1, ylim=c(0,.08), digits=list(2L,2), 
-       # cex=1.2,
-       legend=TRUE)
-
-# res
-# trimfill(res)
-
-## contour-enhanced funnel plot
-# funnel(dat$yi, dat$vi, yaxis="seinv", ## "seinv" for the inverse of the standard errors
-#        # xlim=c(-.5, .5),
-#        # ylim=c(10, 200), 
-#        xaxs="i", yaxs="i", las=1, 
-#        level=c(.10, .05, .01), 
-#        shade=c("white", "gray55", "gray85"), ## pink -- not significant 
-#        legend=TRUE, 
-#        # back="grey90",
-#        hlines=NULL, ylab="Precision (1/se)")
-
-f <- paste0('./figures/', 'plot_funnel_', today, '.png'); f
-png(file=f, 
-    width = 1000, height = 1000, units = "px", pointsize = 22) 
-funnel(
-  # trimfill(res, side = 'right'),
-  res,
-  las=1, ylim=c(0,.08), digits=list(2L,2),
-  level=c(.10, .05, .01),
-  shade=c("white", "gray50", "gray65"), ## pink -- not significant
-  legend=TRUE,
-  back="grey90",
-  hlines=NULL)
-dev.off() 
-
-```
-
-
-
-#### `meta`
-```{r}
-library(meta)
-m.cor <- metacor(cor = mean, 
-                 n = N,
-                 studlab = id,
-                 data = exp_sub_mods_coef,
-                 # fixed = FALSE,
-                 # random = TRUE,
-                 method.tau = "REML",
-                 hakn = TRUE,
-                 title = "Nature-Health")
-summary(m.cor)
-```
-
-
-
-
-```{r - auto-report, eval=FALSE, include=FALSE}
-### reporter() function
-dir.report <- paste0('./figures/'); dir.report
-reporter(res, dir = dir.report)
-
-# reporter(res, format="pdf", 
-#          dir = paste0(dir.root, '/figures/'), 
-#          filename = 'report_metafor.PDF')
-#          
-# reporter(res, format="word")
-
-### add an outlier
-# dat$yi[6] <- 2.5
-# res <- rma(yi, vi, data=dat)
-# reporter(res)
-```
-
